@@ -141,13 +141,13 @@ dynamic_collections:
         - R - 17+ (violence & profanity)
         - no/18
         - R18
-        - gb/R18
         - gb/X
         - X
         - NC-17
         - R+ - Mild Nudity
         - Rx - Hentai
       X18+:
+        - gb/R18
         - au/X 18+
         - de/BPjM Restricted
         - BPjM Restricted
