@@ -144,12 +144,12 @@ dynamic_collections:
         - R
         - 16
         - 17
+        - NC-17
         - R - 17+ (violence & profanity)
+        - gb/X
         - no/18
       R18:
         - gb/R18
-        - gb/X
         - X
-        - NC-17
         - R+ - Mild Nudity
         - Rx - Hentai
